sas-core/main/default/objects/Settlement_Item__c/Settlement_Item__c.object-meta.xml
<CustomObject>
    <description>The combination of one customer and cost account. At settlement file can contain several passenger and each passenger several reasons for compensation.</description>
    <label>Settlement Item</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{0000}</displayFormat>
        <label>Settlement Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlement Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>