sas-core/main/default/objects/Settlement_Item__c/fields/Accounting_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Accounting_File_Name__c</fullName>
    <label>Accounting File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>