sas-core/main/default/objects/Settlement_Item__c/fields/Amount_in_SEK__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_SEK__c</fullName>
    <label>Amount in SEK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>