sas-core/main/default/objects/Settlement_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(X05.01) Scanning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>