sas-core/main/default/objects/Settlement_Item__c/fields/Cost_Account__c.field-meta.xml
<CustomField>
    <fullName>Cost_Account__c</fullName>
    <label>Cost Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6733</fullName>
                <label>6733 - Goodwill Compensation</label>
            </value>
            <value>
                <fullName>6741</fullName>
                <label>6741 - Liability - Baggage Damaged</label>
            </value>
            <value>
                <fullName>6742</fullName>
                <label>6742 - Liability - Baggage Delayed/missing/lost</label>
            </value>
            <value>
                <fullName>6743</fullName>
                <label>6743 - Liability - Baggage Pilfered</label>
            </value>
            <value>
                <fullName>6738</fullName>
                <label>6738 - Liability - Care (Meal, Hotel, Transportation)</label>
            </value>
            <value>
                <fullName>6721</fullName>
                <label>6721 - Liability - Denied Boarding Compensation</label>
            </value>
            <value>
                <fullName>6722</fullName>
                <label>6722 - Liability - Downgrading Compensation</label>
            </value>
            <value>
                <fullName>6727</fullName>
                <label>6727 - Liability - EU 261 Compensation</label>
            </value>
            <value>
                <fullName>6735</fullName>
                <label>6735 - Liability - Other</label>
            </value>
            <value>
                <fullName>6737</fullName>
                <label>6737 - Refund of tickets and ancillary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>