sas-core/main/default/objects/Settlement_Item__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>Cost Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90801</fullName>
                <default>true</default>
                <label>90801</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>