sas-core/main/default/objects/Settlement_Item__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Name of customer for this settlement item</description>
    <label>Customer Name</label>
    <type>TextArea</type>
</CustomField>