sas-core/main/default/objects/Settlement_Item__c/fields/Deductible_Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Insurance_Amount__c</fullName>
    <label>Deductible Insurance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>