sas-core/main/default/objects/Settlement_Item__c/fields/Is_Insured__c.field-meta.xml
<CustomField>
    <fullName>Is_Insured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the settlement item covered by SAS's insurance.</description>
    <label>Is Insured</label>
    <type>Checkbox</type>
</CustomField>