sas-core/main/default/objects/Settlement_Item__c/fields/Net_Amount_After_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_After_Deductible__c</fullName>
    <description>The amount which SAS can claim from our insurance companyin the same currency as the settlement item. Set only for claim types against which SAS is insured.</description>
    <inlineHelpText>The amount which SAS can claim from our insurance companyin the same currency as the settlement item. Set only for claim types against which SAS is insured.</inlineHelpText>
    <label>Net Amount After Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>