sas-core/main/default/objects/Settlement_Item__c/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <inlineHelpText>Settlement to which this settlement belongs to</inlineHelpText>
    <label>Settlement</label>
    <referenceTo>Settlement__c</referenceTo>
    <relationshipLabel>Settlement Items</relationshipLabel>
    <relationshipName>Settlement_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>