sas-core/main/default/objects/Settlement_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending L1 confirmation</fullName>
            </value>
            <value>
                <fullName>Waiting for transfer</fullName>
            </value>
            <value>
                <fullName>Sent to Racer</fullName>
            </value>
            <value>
                <fullName>Rejected by Racer</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>