sas-core/main/default/objects/Settlement_Item__c/recordTypes/DefaultRecordType.recordType-meta.xml
<RecordType>
    <fullName>DefaultRecordType</fullName>
    <active>true</active>
    <description>When the case Record Type is other then Emergency</description>
    <label>Default Record Type</label>
</RecordType>