sas-core/main/default/objects/Settlement_Item__c/recordTypes/Emergency.recordType-meta.xml
<RecordType>
    <fullName>Emergency</fullName>
    <active>true</active>
    <description>When the case Record Type is Emergency</description>
    <label>Emergency</label>
</RecordType>